--- a/frontend/crud-todo-app/.env.development
+++ b/frontend/crud-todo-app/.env.development
@@ -1,4 +1,4 @@
 VITE_DEV_MODE_PORT=1500
 
 # api endpoints
-VITE_API_URL=http://localhost:3000/api/todos
+VITE_API_URL=https://todo-app-m8bi.onrender.com
