--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,3 +1,4 @@
 PORT=3000
 DB_URL=mongodb+srv://sainggarhogenn:zlL7giDnu1xTmvPN@cluster0.bayquco.mongodb.net/todo?retryWrites=true&w=majority&appName=Cluster0
 DEBUG_MODE=true
+DOMAIN_URL=https://todo-app-rose-omega.vercel.app
